Date	Added
11/24
	* Updated most of jA's 1067; battle.c and skill.c might need more updates! [Codemaster]
	* Fixed char-txt crashing when closing, Codemaster free()'s. [MC Cameri]
        * Skill Updates: - Updated guild skills (60%) [celest]
11/23
	* Fixed script loading small/large monsters. [Valaris]
	* @charoption is now #option [MC Cameri]
	* @charpetfriendly is now #petfriendly [MC Cameri]
	* @charstats is now #stats [MC Cameri]
        * Skill Updates: [celest]
          - Added some code for the new guild skills (50%) and Moonlit Petals (5%)
          - Notes to other devs: Guild skills with id's 10000-10014 will be stored in
            skill_db[500-514]
          - Corrected Hilt Binding
          - Corrected Assassin Cross' dual wield
          - Changed player_cloak_check_type to yes by default and edited description
            since it's already fully implemented.
          - Added a bit more restrictions to Call Partner and Emergency Recall and
            updated mapflag for sec_pri.gat
          - Added pc_calcspeed and updated Cloaking so it won't need to recalculate
            the player's entire status everytime there is movement.

11/22
	* (TXT)Stripped some code off read_gm_accounts() and made with it addGM() [MC Cameri]
	  -Usage: addGM(account_id,level);
	* (TXT)Changed GM_accounts.txt to meet new standards. [MC Cameri]
	* (TXT)Enabled the use of id ranges in GM_accounts.txt [MC Cameri]
	* Added a few free()'s so that I am sure it freed the allocated memory (char & login) [Codemaster]
	* Changed monsters_ignore_gm option to a level value. [Valaris]
	  (accounts greater than or equal to this setting won't be attacked by aggressives.)
	* Fixed mapflag #s and constants for setmapflag and remove mapflag. [Valaris]
        * Added skill names for kRO 11/23's new skills [celest]
          - Preserve, Full Strip, Weapon Refine, Slim Pitcher, Full Chemical Protection,
            (Throw) Tomahawk