@@ -2,7 +2,7 @@
 // Translated by Peter Kieser <pfak@telus.net>
 
 // Set here the symbol that you want to use for your commands
-// Only 1 character is get (default is '@'). You can set any character,
+// Only 1 character is get (default is character_savecharacter_save'@'). You can set any character,
 // except control-character (0x00-0x1f), '%' (party chat speaking) and '/' (standard ragnarok GM commands)
 // With default character, all commands begin by a '@': <example> @revive
 command_symbol: @
@@ -40,6 +40,8 @@ command_symbol: @
 // 0: normal player commands
 
 // Give server time. (6 same commands)
+uptime: 0
+changesex: 0
 time: 0
 date: 0
 server_date: 0
@@ -119,9 +121,6 @@ mountpeco: 20
 who: 20
 whois: 20
 
-// Returns list of top 50 logged in characters and their zeny based on zeny sorted from highest amount to lowest.
-whozeny: 20
-
 // Returns list of logged in characters with their job.
 who2: 20
 
@@ -171,12 +170,6 @@ kamib: 40
 
 // Enables you to go to a certain map, at (x,y) coordinates. (@mapmove + /mm or /mapmove)
 mapmove: 40
-
-// Enables you to view other characters stats.
-charstats: 40
-
-// Shows Stats Of All Characters Online
-charstatsall: 40
 
 // Enables GVG on a map (2 same commands).
 gvgon: 40
@@ -294,9 +287,6 @@ useskill: 40
 // make another player killable
 charkillable: 40
 
-// makes everyone on server do a random emote
-happyhappyjoyjoy:40
-
 //---------------------
 // 50: Sub-GM+ commands
 
@@ -313,18 +303,11 @@ spawn: 50
 monster: 50
 summon: 50
 
-// Spawns monster in small or big size.
-monstersmall: 50
-monsterbig: 50
-
 // Spawns a monster with parameters not in same order of @spawn.
 monster2: 50
 
 // To get a peco to (un)ride for another player.
 charmountpeco: 50
-
-// Enables to give possibility to a player to rename his/her pet.
-charpetrename: 50
 
 
 //----------------
@@ -361,12 +344,6 @@ chardelitem: 60
 // Sets another persons job level.
 charjlvl: 60
 
-// Sets the job of another character (2 same commands).
-charjob: 60
-charjobchange: 60
-
-// Set options on another character.
-charoption: 60
 
 // Gives another character status points
 charstpoint: 60
